<resources>
    <string name="lib_pandora_back">返回</string>
    <string name="lib_pandora_sure">完成（%1$d/%2$d）</string>
    <string name="lib_pandora_shot">拍摄</string>
    <string name="lib_pandora_compressing">正在压缩，请稍等。。。</string>
    <string name="lib_pandora_check_camera">对不起，未检测到您的摄像头！</string>
    <string name="lib_pandora_check_external_storage">请插入SD卡！</string>
    <string name="lib_pandora_check_max_count">您最多只能选择%1$d张图片！</string>
    <string name="lib_pandora_number">%1$d张</string>
    <string name="lib_pandora_pupil_indicator">%1$d/%2$s</string>
    <string name="lib_pandora_all_clay">全部图片</string>
</resources>
