<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.android.pandora.Pandora"
    tools:ignore="RtlHardcoded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/lib_pandora_colorPrimary"
            android:minHeight="?attr/actionBarSize">

            <ImageView
                android:id="@id/lib_pandora_activity_pandora_navigation_icon_view"
                style="@style/Widget.AppCompat.ActionButton.Overflow"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:contentDescription="@string/lib_pandora_back"
                android:scaleType="centerInside"
                android:src="@mipmap/module_pandora_tool_bar_navigation_icon" />

            <ImageView
                android:id="@id/lib_pandora_activity_pandora_shot_button_view"
                style="@style/Widget.AppCompat.ActionButton.Overflow"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/lib_pandora_shot"
                android:scaleType="centerInside"
                android:src="@mipmap/lib_pandora_camera_icon" />

            <TextView
                android:id="@id/lib_pandora_activity_pandora_sure_button_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/lib_pandora_activity_pandora_shot_button_view"
                android:background="@drawable/lib_pandora_sure_button_shape"
                android:gravity="center"
                android:text="@string/lib_pandora_sure"
                android:textColor="@android:color/white"
                android:visibility="gone" />

            <TextView
                android:id="@id/lib_pandora_activity_pandora_album_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/lib_pandora_activity_pandora_sure_button_view"
                android:layout_toRightOf="@id/lib_pandora_activity_pandora_navigation_icon_view"
                android:ellipsize="end"
                android:gravity="center_vertical|left"
                android:maxLines="1"
                android:text="@string/lib_pandora_all_clay"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@id/lib_pandora_activity_pandora_clay_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never" />

            <LinearLayout
                android:id="@id/lib_pandora_activity_pandora_extra"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/lib_pandora_B44E5456"
                android:orientation="vertical"
                android:visibility="gone">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@id/lib_pandora_activity_pandora_clays_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="3"
                    android:background="@android:color/black"
                    android:overScrollMode="never" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="onEmptyClick" />

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@id/lib_pandora_activity_progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/lib_pandora_EE000000"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="16dp">

            <ProgressBar
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"
                android:indeterminate="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="8dp"
                android:text="@string/lib_pandora_compressing"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </FrameLayout>
</FrameLayout>